<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danian.postest.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/bt_print_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_print_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_key_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_key_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_key_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_led_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_led_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_led_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_beep_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_beep_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_beep_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_icc_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_icc_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_icc_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_ver_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_version_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bt_picc_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_picc_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_picc_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bt_sensor_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_sensor_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_sensor_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bt_magcard_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_magcard_test"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_magcard_test"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        tools:ignore="MissingConstraints" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
