<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danian.postest.TestBeepActivity">

    <TextView
        android:id="@+id/beep_test_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beep_test_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/bt_beep_success"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/button_success"
        android:text="@string/bt_success"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_beep"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_beep_on"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_beep_on"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_normal"
        android:text="@string/bt_beep_on"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_beep"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beep_test_title"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_beep_fail"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/button_fail"
        android:text="@string/bt_fail"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline_beep"
        app:layout_constraintTop_toBottomOf="@+id/bt_beep_on"
        tools:ignore="MissingConstraints" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_beep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
